# poolbridge

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: config.md  setup.md  technical.md  workflow.md
examples/: README.md  sample_config.yaml  sample_emlid_export.csv
poolbridge/: __init__.py  cli.py  config.py  contouring.py  converter.py  dxf_utils.py  dxf_writer.py  localization.py  readers.py  validation.py
scripts/: e2e_test.py  take_screenshots.py
tests/: test_config.py  test_contouring.py  test_converter.py  test_localization.py  test_readers.py
